[project]
name = "decancer_py"
requires-python = ">=3.7,<3.12"
description = "Python bindings for decancer."
authors = [{ name = "Jonxslays" }]
license = { file = "LICENSE" }
readme = "README.md"
version = "0.2.1"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
homepage = "https://github.com/Jonxslays/decancer_py"
repository = "https://github.com/Jonxslays/decancer_py"
documentation = "https://github.com/Jonxslays/decancer_py"

[tool.maturin]
strip = true

[tool.poetry]
name = "decancer_py"
version = "0.2.1"
authors = ["Jonxslays"]
description = "Python bindings for decancer."

[tool.poetry.dependencies]
python = ">=3.7,<3.12"

[tool.poetry.group.dev.dependencies]
black = "~=22.12.0"
maturin = "0.14.7"
nox = "~=2022.11.21"
pytest = "~=7.2.0"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"
