[project]
name = "decancer_py"
requires-python = ">=3.8,<3.13"
description = "Python bindings for decancer."
authors = [{ name = "Jonxslays" }]
license = { file = "LICENSE" }
readme = "README.md"
version = "0.4.0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
homepage = "https://github.com/Jonxslays/decancer_py"
repository = "https://github.com/Jonxslays/decancer_py"
documentation = "https://github.com/Jonxslays/decancer_py"

[tool.maturin]
strip = true

[tool.poetry]
name = "decancer_py"
version = "0.3.0"
authors = ["Jonxslays"]
description = "Python bindings for decancer."

[tool.poetry.dependencies]
python = ">=3.8,<3.13"

[tool.poetry.group.dev.dependencies]
black = { version = "~=23.7.0", python = ">=3.8"}
maturin = "~=1.1.0"
nox = "~=2023.4.22"
pytest = "~=7.4.0"

[build-system]
requires = ["maturin~=1.1.0"]
build-backend = "maturin"
