[project]
name = "decancer_py"
requires-python = ">=3.10.0,<3.15"
description = "Python bindings for decancer."
authors = [{ name = "Jonxslays" }]
license = { file = "LICENSE" }
readme = "README.md"
version = "0.4.1"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
homepage = "https://github.com/Jonxslays/decancer_py"
repository = "https://github.com/Jonxslays/decancer_py"
documentation = "https://github.com/Jonxslays/decancer_py"

[tool.maturin]
strip = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "black~=23.7.0; python_version>='3.8'",
    "maturin~=1.1.0",
    "nox~=2023.4.22",
    "pytest~=7.4.0",
]

[build-system]
requires = ["maturin~=1.1.0"]
build-backend = "maturin"
